force-app/main/default/objects/Promotional_Stock__c/Promotional_Stock__c.object-meta.xml
<CustomObject>
    <description>用于菲律宾促销员填写库存记录</description>
    <label>Promotional Stock</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Promotional Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>