force-app/main/default/objects/Promotional_Stock__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Promotional Stocks</relationshipLabel>
    <relationshipName>Promotional_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>