force-app/main/default/objects/Promotional_Stock__c/fields/Promoter_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Promotional Stocks</relationshipLabel>
    <relationshipName>Promotional_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>