force-app/main/default/objects/Promotional_Stock__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <formula>Promoter_Daily_Report__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>