force-app/main/default/objects/Promotional_Stock__c/fields/SaveDate__c.field-meta.xml
<CustomField>
    <fullName>SaveDate__c</fullName>
    <description>更新时间</description>
    <label>SaveDate</label>
    <type>DateTime</type>
</CustomField>