force-app/main/default/objects/Promotional_Stock__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <formula>CASESAFEID( Promoter_Daily_Report__r.Shop__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store</label>
    <type>Text</type>
</CustomField>