force-app/main/default/objects/Promotional_Stock__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stroe Code</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Promotional Stocks</relationshipLabel>
    <relationshipName>Promotional_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>